--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.youth.banner:banner:1.4.5'
     compile 'fm.jiecao:jiecaovideoplayer:4.8.3'
     compile 'com.android.support:support-v4:25.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
