--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'fm.jiecao:jiecaovideoplayer:4.8.3'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.makeramen:roundedimageview:2.3.0'
 }
