--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".SettingActivity" />
         <activity android:name=".PersonInfoActivity" />
         <activity android:name=".TypeThreeMoreActivity" />
+        <activity android:name=".SortDetailsActivity" />
+        <activity android:name=".ColumnListActivity"></activity>
     </application>
 
 </manifest>
