--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,10 @@
         <activity android:name=".PersonInfoActivity" />
         <activity android:name=".TypeThreeMoreActivity" />
         <activity android:name=".TypeZeroMoreActivity" />
-        <activity android:name=".TypeOneMoreActivity"></activity>
+        <activity android:name=".TypeOneMoreActivity" />
         <activity android:name=".SortDetailsActivity" />
-        <activity android:name=".ColumnListActivity"></activity>
+        <activity android:name=".ColumnListActivity" />
+        <activity android:name=".TurnOneActivity"></activity>
     </application>
 
 </manifest>
