写了 推荐界面的多数item点击跳转，写了一个webView，加了一个CardView的依赖库。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".SortDetailsActivity" />
         <activity android:name=".ColumnListActivity" />
         <activity android:name=".TurnOneActivity" />
-        <activity android:name=".TurnTwoActivity"></activity>
+        <activity android:name=".TurnTwoActivity" />
+        <activity android:name=".WebViewActivity"></activity>
     </application>
 
 </manifest>
