写了电台跳转播放界面(未完善)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".TurnOneActivity" />
         <activity android:name=".TurnTwoActivity" />
         <activity android:name=".WebViewActivity"></activity>
+        <activity android:name=".PlayRadioActivity"></activity>
     </application>
 
 </manifest>
