--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="com.yikouguaishou.peanutfm">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <application
         android:name=".utils.APP"
@@ -37,8 +38,9 @@
         <activity android:name=".ColumnListActivity" />
         <activity android:name=".TurnOneActivity" />
         <activity android:name=".TurnTwoActivity" />
-        <activity android:name=".WebViewActivity"></activity>
-        <activity android:name=".PlayRadioActivity"></activity>
+        <activity android:name=".WebViewActivity" />
+        <activity android:name=".PlayRadioActivity" />
+        <activity android:name=".AnchorHomeActivity"></activity>
     </application>
 
 </manifest>
