完善主播动态碎片页面，并编写了动态item的点击事件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         <activity android:name=".PlayRadioActivity" />
         <activity android:name=".AnchorHomeActivity" />
         <activity android:name=".RadioPlayActivity" />
-        <activity android:name=".RadioPlayListActivity"></activity>
+        <activity android:name=".RadioPlayListActivity" />
+        <activity android:name=".DynamicDetailsActivity"></activity>
     </application>
 
 </manifest>
