编写主播动态的详情页面， 编写主播动态的评论列表

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         <activity android:name=".AnchorHomeActivity" />
         <activity android:name=".RadioPlayActivity" />
         <activity android:name=".RadioPlayListActivity" />
-        <activity android:name=".DynamicDetailsActivity"></activity>
+        <activity android:name=".DynamicDetailsActivity" />
+        <activity android:name=".ShowPhotoActivity"></activity>
     </application>
 
 </manifest>
