--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity android:name=".RadioPlayListActivity" />
         <activity android:name=".DynamicDetailsActivity" />
         <activity android:name=".ShowPhotoActivity"></activity>
+
+        <service android:name=".service.MyService" />
     </application>
 
 </manifest>
