写了电台播放界面的评论，并写了分享（测试）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,11 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".service.MyRadioStationService"
+            android:enabled="true"
+            android:exported="true"></service>
+
     </application>
 
 </manifest>
